# granite-text-intelligence

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  streamlit_app.py
.claude/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
tests/: test_app_ui.py  test_streamlit_app.py
