[project]
name = "granite-text-intelligence"
version = "0.1.0"
description = "Analyze text — summarization, topic detection, intent recognition, and sentiment, in a selectable output language — using the IBM Granite 4.1 model on Apple Silicon with MLX."
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.31,<0.32",
    "python-dotenv>=1.2.2",
    "streamlit",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.12"
