[project]
name = "granite-text-intelligence"
version = "0.1.0"
description = "Streamlit application for analyzing text using IBM Granite on Apple Silicon with MLX."
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.31,<0.32",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57",
]

[dependency-groups]
dev = [
    "pytest",
    "pyyaml>=6.0.3",
    "ruff",
    "ty",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.12"
